--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "Ryan Wiemer <ryan@ryanwiemer.com> (http://ryanwiemer.com/)"
   ],
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "react",
+      "es2015"
+    ]
+  },
   "devDependencies": {
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^4.0.0",
