--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "node-neat": "^1.7.2",
     "node-sass": "^3.4.2",
     "path": "^0.12.7",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-router": "^2.0.0",
+    "react-addons-css-transition-group": "^15.0.1",
     "sass-loader": "^3.2.0",
     "store2": "^2.3.0",
     "style-loader": "^0.13.1",
