--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
+    "classnames": "^2.2.3",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.7.1",
