--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
+    "classnames": "^2.2.3",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.7.1",
@@ -52,6 +53,7 @@
     "path": "^0.12.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-input-mask": "^0.6.6",
     "react-router": "^2.0.0",
     "react-addons-css-transition-group": "^15.0.1",
     "sass-loader": "^3.2.0",
