--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^4.0.0",
-    "eslint-loader": "^1.2.1",
-    "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
