--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,6 @@
   "extends": "airbnb",
   "rules": {
     "max-len": 0,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
   }
 }
