--- a/package.json
+++ b/package.json
@@ -27,39 +27,38 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^3.0.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.0.0",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
     "babel-core": "^6.7.5",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
-    "classnames": "^2.2.3",
-    "express": "^4.13.4",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.7.1",
     "json-loader": "^0.5.4",
-    "lodash": "^4.9.0",
     "modernizr-webpack-plugin": "^1.0.5",
-    "moment": "^2.11.1",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
     "node-sass": "^3.4.2",
     "path": "^0.12.7",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "classnames": "^2.2.3",
+    "lodash": "^4.9.0",
+    "moment": "^2.11.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-input-mask": "^0.7.2",
     "react-router": "^2.0.0",
     "react-addons-css-transition-group": "^15.2.1",
-    "sass-loader": "^4.0.0",
-    "store2": "^2.3.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.11"
+    "store2": "^2.3.0"
   }
 }
