--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "lodash": "^4.9.0",
     "moment": "^2.11.1",
     "react": "^15.2.1",
+    "react-addons-css-transition-group": "^15.2.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.2.1",
     "react-input-mask": "^0.7.2",
     "react-router": "^2.0.0",
-    "react-addons-css-transition-group": "^15.2.1",
     "store2": "^2.3.0"
   }
 }
