--- a/package.json
+++ b/package.json
@@ -2,65 +2,36 @@
   "name": "rental-resume.com",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/chrisheninger/rental-resume.com"
   },
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p",
-    "deploy:staging": "npm run build && surge dist staging.rental-resume.com",
-    "deploy:prod": "npm run build && surge dist rental-resume.com",
-    "develop": "webpack-dev-server --inline --content-base app --history-api-fallback",
-    "start": "npm run develop"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "contributors": [
     "Chris Heninger <heninger@gmail.com> (http://chrisheninger.com/)",
     "Ryan Wiemer <ryan@ryanwiemer.com> (http://ryanwiemer.com/)"
   ],
-  "license": "MIT",
-  "babel": {
-    "presets": [
-      "react",
-      "es2015"
-    ]
-  },
   "devDependencies": {
-    "babel-core": "^6.7.5",
-    "babel-loader": "^6.2.4",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-es2015": "^6.6.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.0.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.0.0",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.7.1",
-    "json-loader": "^0.5.4",
-    "modernizr-webpack-plugin": "^1.0.5",
-    "node-bourbon": "^4.2.3",
+    "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
-    "node-sass": "^3.4.2",
-    "path": "^0.12.7",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1"
+    "node-sass": "^4.5.1",
+    "react-scripts": "^0.9.5"
   },
   "dependencies": {
-    "classnames": "^2.2.3",
-    "lodash": "^4.9.0",
-    "moment": "^2.11.1",
-    "react": "^15.2.1",
-    "react-addons-css-transition-group": "^15.2.1",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.2.1",
-    "react-input-mask": "^0.7.2",
-    "react-router": "^2.0.0",
-    "store2": "^2.3.0"
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-input-mask": "^0.7.8",
+    "react-router": "^3.0.0",
+    "store2": "^2.5.0"
   }
 }
