`prettier` all the things

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,3 @@
 {
-  "extends": "airbnb",
-  "rules": {
-    "max-len": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-  }
+  "extends": "react-app"
 }
