--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-# Node Modules
-node_modules/*
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-npm-debug.log
 
-# OS X Junk
+# production
+build
+
+# misc
 .DS_Store
-.DS_Store/*
-.DS\_Store
-
-# Build Folder
-dist
-dist/*
+.env
+npm-debug.log
+src/index.css
