--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "description": "",
   "license": "MIT",
+  "homepage": "https://rental-resume.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/chrisheninger/rental-resume.com"
@@ -18,6 +19,7 @@
     "start-js": "react-scripts start",
     "precommit": "lint-staged",
     "build": "npm run build-css && react-scripts build",
+    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -41,14 +43,15 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
+    "gh-pages": "^1.0.0",
     "husky": "^0.13.4",
-    "lint-staged": "^3.5.1",
+    "lint-staged": "^3.6.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "node-sass": "^4.5.3",
     "node-sass-chokidar": "0.0.2",
     "npm-run-all": "^4.0.2",
-    "prettier": "^1.3.1",
+    "prettier": "^1.4.2",
     "react-scripts": "1.0.7"
   }
 }
