--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,4 @@
+
 # EditorConfig helps developers define and maintain consistent
 # coding styles between different editors and IDEs
 # editorconfig.org
@@ -5,17 +6,14 @@
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-indent_size = 2
 indent_style = space
-insert_final_newline = true
-max_line_length = 80
+indent_size = 2
+
+# We recommend you to keep these unchanged
+end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.md]
-max_line_length = 0
 trim_trailing_whitespace = false
-
-[COMMIT_EDITMSG]
-max_line_length = 0
