--- a/package.json
+++ b/package.json
@@ -29,10 +29,9 @@
     "moment": "^2.18.1",
     "prop-types": "15.5.10",
     "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-input-mask": "^0.8.0",
-    "react-router": "^3.0.5",
+    "react-router-dom": "^4.1.1",
     "store2": "^2.5.1"
   },
   "devDependencies": {
