--- a/.editorconfig
+++ b/.editorconfig
@@ -15,5 +15,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.scss]
+indent_style = tab
+
 [*.md]
 trim_trailing_whitespace = false
