--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "node-sass-chokidar": "0.0.2",
     "npm-run-all": "^4.0.2",
     "prettier": "^1.4.4",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "react-text-mask": "^5.0.2",
+    "text-mask-addons": "^3.6.0"
   }
 }
