Styling the new date pickers

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.18.1",
     "prop-types": "15.5.10",
     "react": "^15.5.4",
+    "react-day-picker": "^6.0.1",
     "react-dom": "^15.5.4",
     "react-input-mask": "^0.8.2",
     "react-router-dom": "^4.1.1",
@@ -45,6 +46,7 @@
     "gh-pages": "^1.0.0",
     "husky": "^0.13.4",
     "lint-staged": "^3.6.1",
+    "moment": "^2.18.1",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "node-sass": "^4.5.3",
