--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "moment": "^2.18.1",
     "prop-types": "15.5.10",
     "react": "^15.6.1",
-    "react-day-picker": "^6.0.3",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dates": "^12.1.2",
     "react-dom": "^15.6.1",
     "react-input-mask": "^0.8.2",
     "react-router-dom": "^4.1.1",
