--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,7 @@
 {
   "*.js": [
     "eslint",
-    "prettier --single-quote --trailing-comma es5 --write",
+    "prettier --write",
     "git add"
   ]
 }
