--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rental-resume.com",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "A simple web app to help people create and print a basic rental resume",
   "license": "MIT",
   "homepage": "https://rental-resume.com",
@@ -25,14 +25,15 @@
   },
   "dependencies": {
     "classnames": "2.2.5",
+    "icon-magic": "^0.2.0",
     "lodash": "4.17.4",
     "moment": "2.19.1",
     "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-jss": "^7.2.0",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    "react-jss": "8.1.0",
     "react-router-dom": "4.2.2",
-    "store2": "2.5.7"
+    "store2": "2.5.9"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
@@ -45,13 +46,13 @@
     "eslint-plugin-react": "7.4.0",
     "gh-pages": "1.0.0",
     "husky": "0.14.3",
-    "lint-staged": "4.3.0",
+    "lint-staged": "5.0.0",
     "node-bourbon": "4.2.8",
     "node-neat": "1.7.2",
     "node-sass": "4.5.3",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "4.1.1",
-    "prettier": "1.7.4",
+    "prettier": "1.8.2",
     "react-scripts": "1.0.14"
   }
 }
