--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "rental-resume.com",
   "version": "4.0.0",
-  "description": "A simple web app to help people create and print a basic rental resume",
+  "description":
+    "A simple web app to help people create and print a basic rental resume",
   "license": "MIT",
   "homepage": "https://rental-resume.com",
   "repository": {
@@ -13,24 +14,24 @@
     "Ryan Wiemer <ryan@ryanwiemer.com> (http://ryanwiemer.com/)"
   ],
   "scripts": {
-    "build-css": "node-sass-chokidar src/scss -o src/ --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/bourbon-neat/app/assets/stylesheets/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/scss -o src/  --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/bourbon-neat/app/assets/stylesheets/ --watch --recursive",
+    "build-css":
+      "node-sass-chokidar src/scss -o src/ --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/bourbon-neat/app/assets/stylesheets/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar src/scss -o src/  --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/bourbon-neat/app/assets/stylesheets/ --watch --recursive",
     "start": "npm-run-all -p watch-css start-js",
     "start-js": "react-scripts start",
     "precommit": "lint-staged",
     "build": "npm run build-css && react-scripts build",
-    "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "dependencies": {
     "classnames": "2.2.5",
-    "icon-magic": "^0.2.0",
     "lodash": "4.17.4",
-    "moment": "2.19.1",
+    "moment": "2.19.3",
     "prop-types": "15.6.0",
-    "react": "16.1.1",
-    "react-dom": "16.1.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-jss": "8.1.0",
     "react-router-dom": "4.2.2",
     "store2": "2.5.9"
@@ -44,15 +45,14 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "gh-pages": "1.0.0",
     "husky": "0.14.3",
-    "lint-staged": "5.0.0",
+    "lint-staged": "6.0.0",
     "node-bourbon": "4.2.8",
     "node-neat": "1.7.2",
     "node-sass": "4.5.3",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "4.1.1",
-    "prettier": "1.8.2",
-    "react-scripts": "1.0.14"
+    "prettier": "1.9.1",
+    "react-scripts": "1.0.17"
   }
 }
