--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rental-resume.com",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "",
   "license": "MIT",
   "homepage": "https://rental-resume.com",
@@ -9,8 +9,8 @@
     "url": "https://github.com/chrisheninger/rental-resume.com"
   },
   "contributors": [
-    "Chris Heninger <heninger@gmail.com> (http://chrisheninger.com/)",
-    "Ryan Wiemer <ryan@ryanwiemer.com> (http://ryanwiemer.com/)"
+    "Chris Heninger <heninger@gmail.com> (https://chrisheninger.com/)",
+    "Ryan Wiemer <ryan@ryanwiemer.com> (https://ryanwiemer.com/)"
   ],
   "scripts": {
     "build-css": "node-sass-chokidar src/scss -o src/ --include-path node_modules/bourbon/app/assets/stylesheets/ --include-path node_modules/bourbon-neat/app/assets/stylesheets/",
@@ -18,39 +18,47 @@
     "start": "npm-run-all -p watch-css start-js",
     "start-js": "react-scripts start",
     "precommit": "lint-staged",
+    "prettier": "prettier --write '**/*.{js,json,css,md}'",
     "build": "npm run build-css && react-scripts build",
     "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "prop-types": "15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-input-mask": "^0.8.2",
-    "react-router-dom": "^4.1.1",
-    "store2": "^2.5.1"
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-input-mask": "^2.0.4",
+    "react-router-dom": "^4.3.1",
+    "store2": "^2.7.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-react-app": "^1.0.4",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
-    "gh-pages": "^1.0.0",
-    "husky": "^0.13.4",
-    "lint-staged": "^3.6.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-config-react-app": "^3.0.3",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.1",
+    "husky": "^1.1.1",
+    "lint-staged": "^7.3.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
-    "node-sass": "^4.5.3",
-    "node-sass-chokidar": "0.0.2",
-    "npm-run-all": "^4.0.2",
-    "prettier": "^1.4.4",
-    "react-scripts": "1.0.7"
-  }
+    "node-sass": "^4.9.3",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.14.3",
+    "react-scripts": "^2.0.4"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
