--- a/package.json
+++ b/package.json
@@ -35,24 +35,24 @@
     "store2": "^2.7.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.6.1",
-    "eslint-config-react-app": "^3.0.3",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
+    "eslint-config-react-app": "^3.0.5",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "gh-pages": "^2.0.1",
-    "husky": "^1.1.1",
+    "husky": "^1.1.3",
     "lint-staged": "^7.3.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.9.4",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
-    "react-scripts": "^2.0.4"
+    "react-scripts": "^2.1.1"
   },
   "browserslist": [
     ">0.2%",
